This is the ChangeLog of the clone project

Created by Dr. Rolf Jansen on 2013-02-19.
Copyright (c) 2013. All rights reserved.

Note: Milestones are embraced with ••••


2014-07-17 20:42  rj - r55

   * clone.c
     - implemented static inline pthread_cond_wait_flag().
     - directory attributes are now set at the end of clone() and not after the call to clone().

2014-07-16 21:02  rj - r54

   * clone.c, clone.1
     - improved -v1 option description in usage() and in the man file.

2014-07-16 10:58  rj - r53

   * clone.c, clone.1
     - added verbosity level 2 for indicating cloned files by a '.'.
     - now level 3 displays the names of all cloned file system items.

2014-07-15 21:51  rj - r52

   * clone.c, utils.h, utils.c
     - optimized ACL reading.
     - utilize open file descriptors for meta data cloning.

2014-07-12 20:00  rj - r51

   * utils.c
     - ACLs ought to be freed using acl_free() instead of free().

2014-07-12 18:15  rj - r50

   * clone.c, utils.h, utils.c
     - in case of FreeBSD transfer only non-trivial ACLs in getMetaData().
     - fix some static analyzer warnings in the key-name/value store.
     - some formatting.
     - set version to 1.0.5b.


•••• 2014-04-02 -- Created a snapshot of r49 for release as v1.0.4, stored it on Google Drive and submitted it to FreeBSD Ports ••••


2014-04-02 11:00  rj - r49

   * clone.c, clone.1
     - implemented different verbosity levels.
     - changed feedback for directory processing, instead of '.' for every kind of processing,
       show '+' for directory creation, '-' for directory deletion, and '=' for no change.
     - count the total number of errors and return it to the shell.
     - in sync mode, if a file is ignored that is hard linked, then its inode needs to be registered in the global hard link store.
     - bumped copyright period - for now 2013-2014.
     - release of version 1.0.4 (r49).

2013-11-12 18:32  rj - r48

   * clone.c, ChangeLog