@@ -6,6 +6,12 @@ Copyright (c) 2013. All rights reserved.
 Note: Milestones are embraced with ••••
 
 
+2014-07-19 22:57  rj - r56
+
+   * clone.c
+     - in synchronization mode don't delete excluded items from the destination.
+     - if in total only 1 item is copied then use singular in the final statistics message.
+
 2014-07-17 20:42  rj - r55
 
    * clone.c
